--- a/TableViewConstraint/Base.lproj/Main.storyboard
+++ b/TableViewConstraint/Base.lproj/Main.storyboard
@@ -27,25 +27,43 @@
                                             <rect key="frame" x="0.0" y="0.0" width="393" height="120"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="10R-Pw-KUC">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="10R-Pw-KUC">
                                                     <rect key="frame" x="10" y="10" width="100" height="100"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="100" id="3RM-Lv-uej"/>
+                                                        <constraint firstAttribute="height" constant="100" id="UaF-uP-SjO"/>
+                                                    </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="exM-Mb-aab">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="exM-Mb-aab">
                                                     <rect key="frame" x="120" y="20" width="120" height="30"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="Lxx-gt-y48"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kyr-XG-FIw">
-                                                    <rect key="frame" x="120" y="60" width="120" height="30"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kyr-XG-FIw">
+                                                    <rect key="frame" x="119.99999999999999" y="60" width="41.333333333333329" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="8KS-4l-ZDy"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="10R-Pw-KUC" secondAttribute="bottom" constant="10" id="2sL-63-ZYo"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="kyr-XG-FIw" secondAttribute="trailing" constant="20" symbolic="YES" id="8hl-HF-7I1"/>
+                                                <constraint firstItem="exM-Mb-aab" firstAttribute="top" secondItem="cYo-3g-ckK" secondAttribute="topMargin" constant="8" id="Emk-uq-wfl"/>
+                                                <constraint firstItem="kyr-XG-FIw" firstAttribute="top" secondItem="exM-Mb-aab" secondAttribute="bottom" constant="10" id="IRX-dp-bPh"/>
+                                                <constraint firstItem="kyr-XG-FIw" firstAttribute="leading" secondItem="10R-Pw-KUC" secondAttribute="trailing" constant="10" id="Iee-b4-H4D"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="exM-Mb-aab" secondAttribute="trailing" constant="133" id="Mt1-fJ-puj"/>
+                                                <constraint firstItem="exM-Mb-aab" firstAttribute="leading" secondItem="10R-Pw-KUC" secondAttribute="trailing" constant="10" id="P4T-eH-yns"/>
+                                                <constraint firstItem="10R-Pw-KUC" firstAttribute="leading" secondItem="cYo-3g-ckK" secondAttribute="leading" constant="10" id="a6p-vT-RVb"/>
+                                                <constraint firstItem="10R-Pw-KUC" firstAttribute="top" secondItem="cYo-3g-ckK" secondAttribute="top" constant="10" id="kIY-Fc-J5e"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="fruitImage" destination="10R-Pw-KUC" id="PDK-3F-kBi"/>
